# python-project-lvl2

./: .coverage  .gitignore  .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
gendiff/: __init__.py  cli.py
gendiff/scripts/: __init__.py  engine.py  gendiff.py  io.py
tests/: __init__.py  test_generate_diff.py
tests/fixtures/: 1.yaml  complex_1.yaml  complex_2.yaml  simple_diff_expected.txt  test_expected.py
