[tool.poetry]
name = "leksuss_gendiff"
version = "0.1.0"
description = ""
authors = ["Andrey <leksus@leksus.info>"]
repository = "https://github.com/leksuss/python-project-lvl2"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"