[tool.poetry]
name = "leksuss_gendiff"
version = "0.2.1"
description = ""
authors = ["Andrey <leksus@leksus.info>"]
repository = "https://github.com/leksuss/python-project-lvl2"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.4"
asciinema = "^2.0.2"
keyring = "^21.1.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
